<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Android DevBytes</string>
    <string name="app_name_bold" formatted="false">
        <![CDATA[
            <font color="%s"><b>android</b></font> <font color="%s">DevBytes</font>
        ]]>
    </string>
    <string name="app_title">DevBytes</string>
    <string name="app_author">© Maxeem America, 2019</string>
    <string name="app_description" formatted="false" tools:ignore="TypographyDashes">
        <![CDATA[
            Made by taking <a href="https://www.udacity.com/course/developing-android-apps-with-kotlin--ud9012">Udacity course</a>
            <br/><br/>
            App <a href="https://github.com/maxeema/andfun-kotlin-dev-bytes/tree/work">GitHub page</a>
        ]]>
    </string>
    <string name="author_email">Maxeem.America@gmail.com</string>
    <string name="email_subject">Hello Max! From \"%s\" app.</string>
    <string name="app_on_google_play">See on Google Play</string>
    <string name="about">About</string>

    <string name="no_connection">Can\'t update. \nCheck connection and retry.</string>
    <string name="no_connection_tap">No Connection. Check Internet.\nTap icon to retry.</string>
    <string name="some_error">Sorry. \nAn error occurred.</string>
    <string name="some_error_tap">An error occurred. Tap to retry.</string>
    <string name="retry">Retry</string>
    <string name="details">Details</string>
    <string name="stat_videos_msg">Videos: %d</string>
    <string name="stat_update_msg">Updated: %s (%d)</string>
    <string name="update_success">Data is up to date!</string>
    <string name="close">Close</string>
    <string name="switch_theme">Day / Night</string>
</resources>
