<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AboutFragment">

    <data>
        <import type="maxeem.america.devbytes.util.Utils"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorSurface">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            app:title="@string/about"
            app:titleTextColor="?android:textColorTertiary"
            app:navigationIcon="?homeAsUpIndicator"
            android:paddingTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/well_end"
            app:layout_constraintHeight_max="240dp"
            app:layout_constraintHeight_percent=".4"
            app:layout_constraintStart_toStartOf="@+id/well_start"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.065"
            app:srcCompat="@drawable/android_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name"
            android:theme="@style/ExpressiveFredokaFont"
            android:textAppearance="?textAppearanceHeadline5"
            android:text="@{ Utils.fromHtml(@string/app_name_bold(@color/primaryVariant, @color/primary)) }"
            tools:text="@string/app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toStartOf="@+id/well_end2"
            app:layout_constraintStart_toStartOf="@+id/well_start2"
            app:layout_constraintWidth_default="wrap" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha=".5"
            android:textAppearance="?textAppearanceCaption"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintEnd_toEndOf="@+id/name"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toTopOf="@+id/name"
            tools:text="0.1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description"
            movementMethod="@{ android.text.method.LinkMovementMethod.getInstance() }"
            textHtml="@{ @string/app_description }"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="14dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/well_end2"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toStartOf="@+id/well_start2"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:text="@string/app_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/google_play"
            style="?materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/app_on_google_play"
            app:layout_constraintEnd_toStartOf="@+id/well_end"
            app:layout_constraintStart_toStartOf="@+id/well_start"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/author"
            style="?borderlessButtonStyle"
            android:textAppearance="?textAppearanceSubtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="90"
            android:text="@string/app_author"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/well_end2"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/well_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/well_start2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/well_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/well_end2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
