<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.ListingFragment">

    <data>
        <variable name="model" type="maxeem.america.devbytes.viewmodels.ListingViewModel" />
        <variable name="busy" type="androidx.databinding.ObservableBoolean" />
        <import type="maxeem.america.devbytes.network.NetworkApiStatus"/>
        <import type="maxeem.america.devbytes.util.Utils"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@{ !busy &amp;&amp; !model.hasData &amp;&amp; model.status instanceof NetworkApiStatus.Error ? @color/windowBackground : @android:color/transparent }">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            visibleOn="@{ model.hasData }"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:id="@+id/refresh"
            android:enabled="@{ !busy &amp;&amp; model.hasData }"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:paddingStart="0dp"
                android:paddingStart="@dimen/listing_item_margin_horizontal"
                android:clipToPadding="false"
                android:fadingEdgeLength="25dp"
                android:requiresFadingEdge="vertical"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:spanCount="@integer/listing_spans"
                tools:listitem="@layout/listing_item"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.appbar.AppBarLayout
            visibleOn="@{ model.hasData }"
            android:id="@+id/appbar"
            style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                app:popupTheme="@style/PrimaryElevationOverlay"
                android:id="@+id/toolbar"
                app:layout_scrollFlags="scroll|snap"
                android:paddingStart="6dp"
                app:title="@string/app_title"
                app:titleTextColor="?colorPrimary"
                app:navigationIcon="@drawable/ic_android_robot"
                app:menu="@menu/main_menu"
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                goneIf="@{ !model.hasData }"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                app:layout_scrollFlags="scroll|snap|enterAlways"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="10dp">

                <TextSwitcher
                    android:layout_alignParentStart="true"
                    text="@{ @string/stat_videos_msg(model.videos.size) }"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inAnimation="@android:anim/fade_in">

                    <com.google.android.material.textview.MaterialTextView
                        android:textAppearance="?textAppearanceSubtitle2"
                        android:textColor="?android:textColorTertiary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/stat_videos_msg" />

                    <com.google.android.material.textview.MaterialTextView
                        android:textAppearance="?textAppearanceSubtitle2"
                        android:textColor="?android:textColorTertiary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </TextSwitcher>

                <TextSwitcher
                    android:layout_alignParentEnd="true"
                    text="@{ @string/stat_update_msg(Utils.formatDateTime(model.lastSync), model.syncCount) }"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inAnimation="@android:anim/fade_in">

                    <com.google.android.material.textview.MaterialTextView
                        android:textAppearance="?textAppearanceCaption"
                        android:textColor="?android:textColorTertiary"
                        android:alpha=".7"
                        tools:text="@string/stat_update_msg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textview.MaterialTextView
                        android:textAppearance="?textAppearanceCaption"
                        android:textColor="?android:textColorTertiary"
                        android:alpha=".7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </TextSwitcher>

            </RelativeLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            visibleOn="@{!busy &amp;&amp; !model.hasData &amp;&amp; model.status instanceof NetworkApiStatus.Error}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@{model.status instanceof NetworkApiStatus.ConnectionError ? @drawable/ic_connection_error : @drawable/ic_broken_image}"
                tools:src="@drawable/ic_connection_error" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/error"
                android:layout_centerHorizontal="true"
                android:paddingTop="20dp"
                android:text="@{ model.status instanceof NetworkApiStatus.ConnectionError ? @string/no_connection_tap : @string/some_error_tap }"
                android:textAlignment="center"
                app:layout_anchor="@id/error"
                app:layout_anchorGravity="bottom|center_horizontal"
                tools:text="@string/no_connection_tap" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:visibleOn="@{ busy }"
            android:layout_gravity="center" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
